--- a/client/src/app/components/counselors/counselors.component.html
+++ b/client/src/app/components/counselors/counselors.component.html
@@ -47,7 +47,7 @@
       </div>
     
       <!-- Submit Button -->
-      <input [disabled]="processing" class="btn btn-primary" type="submit" value="Register" />
+      <input class="btn btn-primary" type="submit" value="Register" />
       <input class="btn btn-primary" (click) = "cancelAdd()" value="Cancel Add" />
     </form>
 </div>
