--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -8,6 +8,7 @@
         <li *ngIf="authService.superUser()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/register-camp">Register Camp</a></li>
         <li *ngIf="authService.superUser()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/camps">Camps</a></li>
         <li *ngIf="authService.superUser()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/modules">Modules</a></li>
+        <li *ngIf="authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/campers">Campers</a></li>
         <li *ngIf="authService.loggedIn()" class="nav-item dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Staff <b class="caret"></b></a>
             <ul class="dropdown-menu" role="menu">
