--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -26,6 +26,12 @@
                 <li *ngIf="authService.admin()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/approvers">Approvers</a></li>
             </ul>
         </li>
+        <li *ngIf="authService.loggedIn() && campsService.hasModule('sports')" class="nav-item dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sports<b class="caret"></b></a>
+            <ul class="dropdown-menu" role="menu">
+                <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/rosters">Rosters</a></li>
+            </ul>
+        </li>
         <li *ngIf="!authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/login">Login</a></li>
         <li *ngIf="authService.admin()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/options">Options</a></li>
         <li *ngIf="authService.loggedIn()"><a href="#" (click)="onLogoutClick()" >Logout</a></li>
