roster create and view

--- a/client/src/app/components/rosters/rosters.component.html
+++ b/client/src/app/components/rosters/rosters.component.html
@@ -1,38 +1,65 @@
 <div *ngIf="newRoster">
-    <h2 class="page-header">Register Roster</h2>
-    
-    <!-- Custom Success/Error Message -->
-    <div class="row show-hide-message">
-      <div [ngClass]="messageClass">
-        {{ message }}
+  <h2 class="page-header">Register Roster</h2>
+  
+  <!-- Custom Success/Error Message -->
+  <div class="row show-hide-message">
+    <div [ngClass]="messageClass">
+      {{ message }}
+    </div>
+  </div>
+  
+  <form [formGroup]="form" (submit)="onRegistrationSubmit()">
+  
+    <div class="form-group">
+      <label for="name">Roster Name</label>
+      <div>
+        <input class="form-control" type="text" name="name" formControlName="name" />
       </div>
     </div>
-    
-    <form [formGroup]="form" (submit)="onRegistrationSubmit()">
-    
-      <div class="form-group">
-        <label for="name">Roster Name</label>
-        <div>
-          <input class="form-control" type="text" name="name" formControlName="name" />
-        </div>
-      </div>
-    
-      <!-- Submit Button -->
-      <input [disabled]="processing" class="btn btn-primary" type="submit" value="Register" />
-      <input class="btn btn-primary" (click) = "cancelAdd()" value="Cancel Add" />
-    </form>
-    </div>
-    
+  
+    <!-- Submit Button -->
+    <input [disabled]="processing" class="btn btn-primary" type="submit" value="Register" />
+    <input class="btn btn-primary" (click) = "cancelAdd()" value="Cancel Add" />
+  </form>
+</div>
+<div *ngIf="getType()=='Head Specialist'">    
     <div *ngFor="let specialty of specialties">
-      <h2>{{specialty.name}} <button class="btn btn-primary" (click) = "showAdd(specialty)" *ngIf = "!newRoster">Add</button></h2>
+      <h2>{{specialty.name}} <button class="btn btn-primary" (click) = "showAdd(specialty,false)" *ngIf = "!newRoster">Add</button></h2>
       <table class="table">
         <tr>
           <th>Roster Name</th>
           <th></th>
+          <th></th>
         </tr>
         <tr *ngFor="let roster of specialty.rosters">
           <td>{{roster.name}}</td>
-          <td><button class="btn btn-primary"(click) = "remove(specialty,roster)">X</button></td>
+          <td><a class="btn btn-primary" [routerLink]="['/roster', specialty._id, roster._id,false]">Go</a></td>
+          <td><button class="btn btn-primary"(click) = "remove(specialty,roster,false)">X</button></td>
         </tr>
       </table>
     </div>
+  </div>
+  <div *ngIf="getType()=='leader'">
+    <div *ngFor="let division of d_keys">
+      <h2>{{division}}</h2>
+      <div *ngFor="let specialty of keys[division]">
+        <h3>{{specialty}}</h3>
+        <table class="table">
+          <tr *ngFor="let roster of divisions[division]['specialties'][specialty]">
+            <td>{{roster.roster.name}}</td>
+            <td><a class="btn btn-primary" [routerLink]="['/roster', roster.s_id, roster.roster._id,false]">Go</a></td>
+          </tr>
+        </table>
+      </div>
+      <div *ngIf="divisions[division]['internal']">
+          <h3>Internal<button class="btn btn-primary" (click) = "showAdd(divisions[division].d_id,true)" *ngIf = "!newRoster">Add</button></h3>
+          <table class="table">
+            <tr *ngFor="let roster of divisions[division]['internal']">
+              <td>{{roster.name}}</td>
+              <td><a class="btn btn-primary" [routerLink]="['/roster', divisions[division].d_id, roster._id,true]">Go</a></td>
+              <td><button class="btn btn-primary"(click) = "remove(divisions[division].d_id,roster,true)">X</button></td>
+            </tr>
+          </table>
+        </div>
+    </div>
+  </div>
