--- a/client/src/app/components/game-calendar/game-calendar.component.html
+++ b/client/src/app/components/game-calendar/game-calendar.component.html
@@ -22,11 +22,19 @@
       </div>
 
       <div class="form-group">
-          <label for="opponent">Opponent</label>
-          <div>
-            <input class="form-control" type="text" name="opponent" formControlName="opponent" />
-          </div>
+        <label for="needsLunch">Lunch?</label>
+        <div>
+          <input type="checkbox" name="needsLunch" formControlName="needsLunch" />
         </div>
+      </div>
+
+      <div class="form-group">
+        <label for="opponent">Opponent</label>
+        <div>
+          <input class="form-control" type="text" name="opponent" formControlName="opponent" />
+        </div>
+      </div>
+
       <input class="btn btn-primary" type="submit" value="Schedule" />
     </form>
   </div>
