--- a/client/src/app/components/swim-stats/swim-stats.component.html
+++ b/client/src/app/components/swim-stats/swim-stats.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="authService.admin() && session">  
+  <app-swim-level-dropdown (selectedChanged) = "filter($event)" [all]="true"></app-swim-level-dropdown>
   <div *ngFor="let division of session.divisions">
     <h2>{{division.d_id.name}}</h2>
     <table class="table table-hover" >
@@ -18,24 +19,6 @@
           <td>{{camper.cSwimOpts.bracelet}}</td>
         </tr>
       </tbody>
-    </table>
-  </div>
-</div>
-
-<div *ngIf="authService.isUser() && divisions">
-  <div *ngFor="let division of divisions">
-  <h2>{{division}}</h2>
-  <table class="table table-hover" >
-      <tr>
-        <th>First</th>
-        <th>Last</th>
-        <th>Gender</th>
-      </tr>
-      <tr *ngFor="let camper of campers[division]" (click)="goToStats(camper)">
-        <td>{{camper.first}}</td>
-        <td>{{camper.last}}</td>
-        <td>{{camper.gender}}</td>
-      </tr>
     </table>
   </div>
 </div>
