--- a/client/src/app/components/campers/campers.component.html
+++ b/client/src/app/components/campers/campers.component.html
@@ -107,7 +107,7 @@
                         
                               <td *ngIf="i!=0 && camper.enrolled">Enrolled</td>
                               <td *ngIf="i!=0 && !camper.enrolled">
-                                  <button class="btn btn-primary" (click) = "reenroll(camper)">Re-enrole</button>
+                                  <button class="btn btn-primary" (click) = "reenroll(camper)">Re-enroll</button>
                               </td>
                               <td *ngIf="i==0"><button class="btn btn-primary" (click) = "remove(camper)">X</button></td>
                             </tr>
