--- a/client/src/app/components/swim-groups/swim-groups.component.html
+++ b/client/src/app/components/swim-groups/swim-groups.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (submit)="createSwimGroupSubmit()">
+<form [formGroup]="form" (submit)="createSwimGroupSubmit()" *ngIf="authService.userType() != 'lifeguard'">
   <div class="form-group">
     <label for="name">Name</label>
     <div>
