--- a/client/src/app/components/counselors/counselors.component.html
+++ b/client/src/app/components/counselors/counselors.component.html
@@ -125,7 +125,7 @@
                               <td>{{counselor.gender}}</td>
                               <td *ngIf="counselor.division ">{{counselor.division.name}}</td>
                               <td *ngIf="!counselor.division">
-                                <app-divisions-dropdown *ngIf="i==0" (selectedChanged) = "preAdd($event,counselor)" [gender]="counselor.gender"></app-divisions-dropdown>
+                                <app-divisions-dropdown *ngIf="i==0" (selectedChanged) = "preAdd($event,counselor)" [gender]="counselor.gender" [divisions]="divGenders(counselor.gender)"></app-divisions-dropdown>
                                 <button *ngIf="i==0" class="btn btn-primary" (click) = "addDivision(counselor)">Add</button>
                               </td>
                               <td>{{counselor.type.type}}</td>
