--- a/client/src/app/components/divisions-dropdown/divisions-dropdown.component.html
+++ b/client/src/app/components/divisions-dropdown/divisions-dropdown.component.html
@@ -1,3 +1,3 @@
 <select (change) = "handleChange($event);" class="form-control" name="division" >
-  <option *ngFor="let division of divisions; index as i" value="{{i}}">{{division.name}}</option>
+  <option *ngFor="let division of _divisions; index as i" value="{{i}}">{{division.name}}</option>
 </select>
