--- a/client/src/app/components/divisions/divisions.component.html
+++ b/client/src/app/components/divisions/divisions.component.html
@@ -18,12 +18,12 @@
         </div>
       </div>
 
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="grade">Grade</label>
         <div>
           <input class="form-control" type="text" name="grade" formControlName="grade" />
         </div>
-      </div>
+      </div> -->
     
       <!-- Submit Button -->
       <input class="btn btn-primary" type="submit" value="Register" />
