--- a/client/src/app/components/evaluate/evaluate.component.html
+++ b/client/src/app/components/evaluate/evaluate.component.html
@@ -1,4 +1,4 @@
-<a href="/evaluations">Back</a>
+<app-back-button></app-back-button>
 <h2>Evaluation #{{evaluation?.evaluation.number}} for {{evaluation?.counselor.first}} {{evaluation?.counselor.last}}</h2>
 <h3>Session: {{evaluation?.evaluation.session.name}}</h3>
 
