--- a/client/src/app/components/evaluations/evaluations.component.html
+++ b/client/src/app/components/evaluations/evaluations.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="ready">
 <div *ngIf="authService.admin()">
     <div class="panel with-nav-tabs">
         <div class="panel-heading">
@@ -68,4 +69,5 @@
       </tr>
     </table>
   </div>
+</div>
 </div>
