--- a/client/src/app/components/specialties/specialties.component.html
+++ b/client/src/app/components/specialties/specialties.component.html
@@ -35,7 +35,7 @@
           <td>{{specialty.name}}</td>
           <td>
             <p *ngFor="let leader of specialty.head_specialists">{{leader.first}} {{leader.last}} <button class="btn btn-primary" (click) = "removeHead(specialty._id,leader._id)">X</button></p>
-            <app-head-staff-dropdown (selectedChanged) = "preAddHead($event,specialty)" (showAddButton) = "showAddButton($event,specialty)" [exclude]="specialty.head_specialists"></app-head-staff-dropdown>
+            <app-head-staff-dropdown (selectedChanged) = "preAddHead($event,specialty)" (showAddButton) = "showAddButton($event,specialty)" [exclude]="specialty.head_specialists" [heads]="heads"></app-head-staff-dropdown>
             <button class="btn btn-primary" *ngIf = "specialty.showAddButton" (click) = "addHead(specialty)">Add</button>
           </td>
           <td><button class="btn btn-primary" (click) = "remove(specialty)">X</button></td>
